# LunarLander-DQN

./: .gitignore  DDQN.py  README.md  actions.py  cuda_test.py  environment.py  hyperparams.py  main.py  pyproject.toml
jupyter-nb/: LunarLanderDDQN.ipynb  LunarLanderDQN.ipynb  mtcar_ddqn_sb3.ipynb
jupyter-nb/data/tb/DQN_1/: events.out.tfevents.1707505068.GLaDOS.20860.0
jupyter-nb/data/tb/DQN_2/: events.out.tfevents.1707505689.GLaDOS.20860.1
jupyter-nb/data/tb/DQN_3/: events.out.tfevents.1707505904.GLaDOS.29004.0
jupyter-nb/data/tb/DQN_4/: events.out.tfevents.1707507222.GLaDOS.29004.1
src/: hyperparams.py  monitor.py  q_val.py  runner.py
